2005-11-27  Titus Brown  <t@issola.caltech.edu>

	* Added 'utils.run_tidy' function & 'test-tidy.py' under tests/.

	* Moved the journey-exception-wrapping into the mechanize mech_open
	  function; this fixes a bug reported by sureshvv.  Augmented
	  test-back.twill to test this, and added a 'plaintext' function
	  to the twill test server.

2005-11-20  Titus Brown  <t@issola.caltech.edu>

	* Switched to using pullparser to extract title in utils.

	* Increased code coverage of unit tests significantly.

2005-11-19  Titus Brown  <t@issola.caltech.edu>

	* Fixed 'code' command to display non-numeric codes from get_code()
	  (which may return None).  'code' itself still requires an integer.

	* Fixed test-wsgi-intercept.py to init global/local dictionaries.

	* Added 'test-find.*'

	* Set __match__ to matching string in find, url, and title.

2005-11-18  Titus Brown  <t@issola.caltech.edu>

	* Version upgraded to 0.8.

	* Removed ez_setup hooks for the moment, because they interfered
	  with build/install.

	* Finished updating to latest mechanize code.  whew.

	* Miscellaneous fixes to browser.py.

	* Miscellaneous fixes to ClientCookie/_Util.py.

	* Added 'showhistory' command.

	* WSGI intercept stuff is now much cleaner.  Could be even cleaner,
	  yes...

	* Updated ClientForm/ClientCookie/pullparser.

2005-11-17  Titus Brown  <t@issola.caltech.edu>

	* substantially updated README with links to other tools.

	* KeyboardInterrupts don't error out in twill-sh; they just force
	  a silent exit.

	* Added a code 500 test to 'test-http-codes'.

2005-11-15  Titus Brown  <t@issola.caltech.edu>

	* Fixed failure to seek(0) before parsing response; problem
	  in _parse_html.  It broke 'back()' behavior for forms.
	  Added test-back.{py,twill}.
	
	* Test cleanup: add try: finally: around __main__ stuff, and
	  add 'initial_url' args.

	* Added 'advanced docs' section.

	* Added http_proxy documentation.

	* Fixed problems caused by failure to construct a valid